--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -56,5 +56,45 @@
 	top:5px;
 }
 
+.demand_button {
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
+	background-color:#ededed;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	font-family:Arial;
+	font-size:18px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+}
+.demand_button:hover {
+	background:linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
+	background-color:#dfdfdf;
+  color: rgb(21, 53, 235)
+}
+.demand_button:active {
+	position:relative;
+	top:5px;
+}
+
+.demand_input {
+  padding: 5px;
+  font-size: 17px;
+  border-width: 2px;
+  border-color: #0b0909;
+  background-color: white;
+  color: #000000;
+  border-style: solid;
+  border-radius: 37px;
+  box-shadow: 0px 0px 5px rgba(66,66,66,.75);
+  text-shadow: 0px 0px 5px rgba(0,0,0,.75);
+}
+._demand_input:focus {
+  outline:none;
+}
 
         
